--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +23,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.9.3",
     "multer": "^1.4.2",
-    "multer-gridfs-storage": "^4.1.0"
+    "multer-gridfs-storage": "^4.1.0",
+    "nodemon": "^2.0.7"
   }
 }
