--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index"
+    "start": "nodemon index"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +23,6 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.9.3",
     "multer": "^1.4.2",
-    "multer-gridfs-storage": "^4.1.0",
-    "nodemon": "^2.0.7"
+    "multer-gridfs-storage": "^4.1.0"
   }
 }
